# Blip-Blop-for-Android

./: .ant-targets-build.xml  AndroidManifest.xml  README.md  ant.properties  build.properties  local.properties  smartblip.keystore
assets/: readme.txt
jni/: Application.mk
jni/SDL/: Android.mk
jni/SDL/include/: SDL.h
jni/SDL/src/main/android/: SDL_android_main.c
jni/SDL_mixer/: Android.mk
jni/src/: Android.mk  CMakeLists.txt  MyDX.001  MyDX.ncb  MyDX.opt  MyDX.plg  STDAFX.H  alpha_blend.cpp  alpha_blend.h  andblip.cbp  andblip.layout  asset.cpp  asset.h  ben_debug.cpp  ben_debug.h  ben_divers.cpp  ben_divers.h  ben_maths.cpp  ben_maths.h  blip.cpp  blip.h  blip_n_blop_3.cpp  blip_n_blop_3.h  blop.h  bonus.h  bonus_beer.h  bonus_fusil.h  bonus_invincible.h  bonus_laser.h  bonus_lf.h  bonus_pm.h  bonus_tonneau.h  bonus_vache.h  box.cpp  box.h  bulle.cpp  bulle.h  caller.cpp  caller.h  cine_player.cpp  (+401 more)
jni/src/Engine/: ddraw.cpp  ddraw.h  dinput.cpp  dinput.h  io.cpp  io.h  windows.cpp  windows.h
jni/src/fmod/: _fmod.h  _fmod.hpp  _fmod_codec.h  _fmod_dsp.h  _fmod_errors.h  _fmod_memoryinfo.h  _fmod_output.h  fmod.h  fmod__errors.h
res/layout/: main.xml
res/values/: strings.xml
src/com/blip/blop/: Smartblip.java
src/org/libsdl/app/: SDLActivity.java
